--- a/datos/datos.csproj
+++ b/datos/datos.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="9.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Npgsql.Json.NET" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
