--- a/datos/datos.csproj
+++ b/datos/datos.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Npgsql.Json.NET" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\entidades\entidades.csproj" />
+  </ItemGroup>
+
 </Project>
