--- a/Farmacia/Farmacia.csproj
+++ b/Farmacia/Farmacia.csproj
@@ -19,6 +19,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="Pruebaxsd.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Pruebaxsd.xsd</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -45,6 +50,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Pruebaxsd.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Pruebaxsd.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
 </Project>
