--- a/Farmacia/Farmacia.csproj
+++ b/Farmacia/Farmacia.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FastReport.Data.Postgres" Version="2025.2.3" />
+    <PackageReference Include="FastReport.OpenSource" Version="2025.2.0" />
+    <PackageReference Include="FastReport.OpenSource.Data.Postgres" Version="2021.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\entidades\entidades.csproj" />
     <ProjectReference Include="..\negocio\negocio.csproj" />
   </ItemGroup>
